--- a/inst/css/styles.css
+++ b/inst/css/styles.css
@@ -117,6 +117,8 @@ div[id$="-main_container"] {
 
 .selectize-dropdown {
  word-wrap : break-word;
+ position: absolute !important;
+  z-index: 1000 !important;
 }
 
 .selectize-dropdown [data-selectable] {
@@ -144,16 +146,27 @@ div[id$="-main_container"] {
 .grid-items {
   display: grid;
   column-gap: 10px;
-  grid-template-columns: 67px minmax(100px, 1fr) minmax(125px, 1fr) minmax(50px, auto); /*minmax(100px, auto) */
-  /*margin-bottom: 15px;*/
+  grid-template-columns: auto minmax(100px, 1fr) minmax(125px, 1fr) auto;
   width: 100%;
   transition: 0.5s;
 }
 
-
+/*
 .item-b {
   white-space: nowrap;
+  overflow: auto;
+  text-overflow: ellipsis;
+  box-sizing: border-box;
 }
+
+.item-c {
+  white-space: nowrap;
+  overflow: auto;
+  text-overflow: ellipsis;
+  box-sizing: border-box;
+}
+*/
+
 
 .flex-container {
     display: flex;
