--- a/inst/css/styles.css
+++ b/inst/css/styles.css
@@ -100,7 +100,7 @@ div[id$="-main_container"] {
   position: relative;
   left: -18px;
   top: -2px;
-  height: 46px;
+  height: 46px; !important;
 }
 
 
