--- a/inst/css/styles.css
+++ b/inst/css/styles.css
@@ -200,6 +200,113 @@ div[id$="-main_container"] {
   cursor: pointer !important;
 }
 
+/* Status app */
+
+.checkbox label {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    font-weight: 600;
+    font-size: 13px;
+    color: #333;
+}
+
+
+div[id$='-sidebar'] {
+  width: 200px;
+  min-width: 200px;
+  max-width: 200px;
+  flex: 0 0 0;
+  overflow-y: auto;
+  transition: all 0.3s ease;
+  display: flex;
+  flex-direction: column;
+}
+
+.sidebar-collapsed div[id$='-sidebar'] {
+  width: 0 !important;
+  min-width: 0 !important;
+  max-width: 0 !important;
+  padding: 0 !important;
+  overflow: hidden !important;
+  flex: 0 0 0 !important;
+}
+
+.sidebar-collapsed div[id$='-sidebar'] * {
+  opacity: 0;
+  transition: opacity 0.2s ease;
+}
+
+div[id$='-sidebar'] * {
+  opacity: 1;
+  transition: opacity 0.2s ease;
+}
+
+table.dataTable td, table.dataTable th {
+  border-left: none !important;
+  border-right: none !important;
+}
+
+.dataTables_wrapper .dataTables_scrollBody {
+  height: auto !important;
+  max-height: none !important;
+  min-height: 20px !important;
+}
+
+.gadget-absfill {
+  top: 0 !important;
+  bottom: 0 !important;
+}
+
+.dataTables_wrapper .dataTables_info {
+  text-align: left !important;
+  float: left !important;
+  padding-left: 0 !important;
+  margin-left: 0 !important;
+  padding: 3px !important;
+  margin: 0 !important;
+}
+
+::placeholder {
+  color: #8e8e8e; /* match colors of placeholders */
+}
+
+.dropdown-menu.custom-dropdown {
+  padding: 4px;
+  width: auto;
+  min-width: unset;
+  word-wrap: break-word;
+}
+.dropdown-menu.custom-dropdown .dropdown-btn {
+  display: block;
+  padding: 6px 12px;
+  margin-bottom: 4px;
+  border: none !important;
+  text-align: left;
+  color: white !important;
+}
+.btn-plum {
+ background-color: #8e7cc3 !important;
+  color: white !important;
+  border: none !important;
+}
+.dropdown-menu.custom-dropdown .btn-success {
+  background-color: #5cb85c !important;
+}
+.dropdown-menu.custom-dropdown .btn-info {
+  background-color: #5bc0de !important;
+}
+.dropdown-menu.custom-dropdown .btn-danger {
+  background-color: #d9534f !important;
+}
+.dropdown-menu.custom-dropdown .btn-plum {
+  background-color: #8e7cc3 !important;
+  color: white !important;
+}
+.dropdown-menu.custom-dropdown .dropdown-btn:hover {
+  filter: brightness(0.9);
+}
 
 
 
