adjust dropdown ui

--- a/inst/css/styles.css
+++ b/inst/css/styles.css
@@ -206,6 +206,7 @@ table.dataTable td, table.dataTable th {
   height: auto !important;
   max-height: none !important;
   min-height: 20px !important;
+  overflow: visible !important;
 }
 
 
